# ForceWM

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.MD  environment.yml  universal_contract.yaml
cmake/: ForceWMDependencies.cmake
data_collection/: camera_observer.py  data_collection.py  inference.py  robot_observer.py  saver.py
extractor/: extract_to_parquet.py  inspect_parquet.py
high_level_controller/: controller.py  interpolator.py  test_interpolator.py  visual_interpolator_test.py
installation_scripts/: install_core_libraries.sh
installation_scripts/templates/: chai3d.CMakeLists.txt  sai-model.CMakeLists.txt  sai-primitives.CMakeLists.txt  sai-urdfreader.CMakeLists.txt
models/: fr3.urdf  fr3.xml  hole.xml  scene.xml
models/peginhole/: holesim.stl
models/robots/: fr3.urdf  fr3.xml
python_tests/: sanity_check_images.py
robot_visualization_tool/: position_control_validation.py  robot_vis.py
sai_installation_scripts/: install_core_libraries.sh  install_dependencies.sh
sai_installation_scripts/cmake/: conda_toolchain.cmake
sai_installation_scripts/templates/: sai-common.CMakeLists.txt
src/: image_benchmark.cpp  redis_keys.h  simulation.cpp
training/: act.py  act_config.yaml  bc_policy.py  dataloader.py  dataset.py  dataset_vis.py  generate_dummy_parquet.py  load_timm_model.py  metadata.npz  normalizer.py  parquet_utils.py  train.py  train_bc.py
training/configs/: bc_default.yaml
